Visual fixes on iphone

--- a/styles/pages/Home.module.css
+++ b/styles/pages/Home.module.css
@@ -132,6 +132,6 @@
 }
 @media screen and (max-width: 480px) {
   .title {
-    font-size: 35px;
+    font-size: 32px;
   }
 }
